--- a/HomeLink/dashboard.css
+++ b/HomeLink/dashboard.css
@@ -46,3 +46,20 @@
 .navbar .form-control {
   padding: .75rem 1rem;
 }
+
+.navbar_search {
+  width: 20vw;
+  height: 3.90vh;
+  background-color: #252525;
+  border: none; /* Remove default input border */
+  border-radius: 10px; /* Adjust border-radius to make it rounder */
+  padding: 0 10px; /* Add padding to provide some spacing inside the input */
+  color: #7A7A7A; /* Set text color to white */
+  font-family: 'Inter Regular';
+  font-size: 1.17vh;
+  background-image: url('assets/search-normal.svg');
+  background-repeat: no-repeat;
+  background-position: right 10px center; /* Adjust position of SVG */
+  background-size: 20px; /* Adjust size of SVG */
+  margin-right: 30.43vw;
+}
