adding search function for support page

--- a/HomeLink/dashboard.css
+++ b/HomeLink/dashboard.css
@@ -51,15 +51,15 @@
   width: 20vw;
   height: 3.90vh;
   background-color: #252525;
-  border: none; /* Remove default input border */
-  border-radius: 10px; /* Adjust border-radius to make it rounder */
-  padding: 0 10px; /* Add padding to provide some spacing inside the input */
-  color: white; /* Set text color to white */
+  border: none; 
+  border-radius: 10px; 
+  padding: 0 10px; 
+  color: white; 
   font-size: 14px;
   background-image: url('assets/search-normal.svg');
   background-repeat: no-repeat;
-  background-position: right 10px center; /* Adjust position of SVG */
-  background-size: 20px; /* Adjust size of SVG */
+  background-position: right 10px center;
+  background-size: 20px; 
 }
 
 @media (max-width: 768px) {
@@ -71,15 +71,15 @@
     width: 20vw;
     height: 3.90vh;
     background-color: #252525;
-    border: none; /* Remove default input border */
-    border-radius: 10px; /* Adjust border-radius to make it rounder */
-    padding: 0 10px; /* Add padding to provide some spacing inside the input */
-    color: white; /* Set text color to white */
+    border: none; 
+    border-radius: 10px; 
+    padding: 0 10px; 
+    color: white; 
     font-size: 14px;
     background-image: url('assets/search-normal.svg');
     background-repeat: no-repeat;
-    background-position: right 10px center; /* Adjust position of SVG */
-    background-size: 20px; /* Adjust size of SVG */
+    background-position: right 10px center; 
+    background-size: 20px; 
   }
 
   
